CHATS_SIT/force-app/main/default/objects/T_PROVR_NOTES__c.object
<CustomObject>
    <fields>
        <fullName>CDE_TYPE_NOTES__c</fullName>
        <description>Note Type</description>
        <label>Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00695</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Provider Notes</relationshipLabel>
        <relationshipName>Provider_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ID_SERVICE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider ID</label>
        <referenceTo>T_CHATS_PROVR_STATUS__c</referenceTo>
        <relationshipLabel>Provider Notes</relationshipLabel>
        <relationshipName>Provider_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TXT_DESC_NOTES__c</fullName>
        <description>Body</description>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Body</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TXT_SUBJECT__c</fullName>
        <description>Subject</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Provider Notes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>